<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/dialog_setup_title"
        android:textSize="25sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textStore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_setup_storename" />

    <EditText
        android:id="@+id/editStore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textDevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_setup_deviceid" />

    <EditText
        android:id="@+id/editDevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSaveStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dialog_setup_btnsetup" />

</LinearLayout>